k8s/overlays/prod/namespace-patch.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: epalika-prod
  labels:
    name: epalika-prod
    environment: production
    security-policy: strict
