k8s/overlays/prod/replica-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openfga
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pdp
spec:
  replicas: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: darta-chalani
spec:
  replicas: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oathkeeper
spec:
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 2
